# cli

./: .env.test.example  .gitignore  .gitmodules  .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  api.ts  build.rs  cliff.toml  deny.toml  dist-workspace.toml  eslint.config.js  install.sh  manifest.json  package-lock.json  package.json  setup.sh  steel-browser-fork-plan.md  steel.rb  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: browser-integration.yml  changelog.yml  ci.yml  npm-publish.yml  release.yml  verify-cookbook-pin.yml
b-test/: playwright.py
browser-use-test/: main.py
docs/: README.md  browser-compat.md  cli-reference.md  migration-agent-browser.md  upstream-sync.md
docs/references/: README.md  agent-troubleshooting.md  steel-browser-commands.md  steel-browser.md  steel-cli.md
examples/reuse_auth_context_example/: index.ts
examples/steel-browser-use-starter/: .env.example  main.py  requirements.txt
examples/steel-credentials-starter/: .env.example  index.ts
examples/steel-files-api-starter/: .env.example  index.ts
examples/steel-magnitude-starter/: .env.example  index.ts  package.json
examples/steel-oai-computer-use-node-starter/: .env.example  index.ts
examples/steel-oai-computer-use-python-starter/: .env.example  main.py  requirements.txt
examples/steel-playwright-python-starter/: main.py  requirements.txt
examples/steel-playwright-starter/: .env.example  index.ts
examples/steel-playwright-starter-js/: index.js
examples/steel-puppeteer-starter/: index.ts
examples/steel-puppeteer-starter-js/: index.js
examples/steel-selenium-starter/: .env.example  main.py  requirements.txt
pppp-test/: index.js
scripts/: browser-cloud-smoke.js  browser-perf-bench.js  browser-perf-budgets.json  browser-runtime-deps-check.js  browser-runtime-smoke.js  bump-cookbook.sh  generate-api.mjs  generate-docs.js  generate-docs.mjs  package-browser-runtime.js  postinstall.js  sync-agent-browser-commands-reference.js  test-integration-table.js
skills/steel-browser/: README.md  SKILL.md
skills/steel-developer/: APIS.md  ECOSYSTEM.md  PYTHON.md  README.md  SKILL.md  TYPESCRIPT.md
source/: steel-cli.tsx  steel.tsx
source/commands/: cache.tsx  config.tsx  contributors  contributors.tsx  cookbook.tsx  docs.tsx  forge.tsx  help.tsx  index.tsx  info.tsx  integrate  integrate.tsx  login.tsx  logout.tsx  pdf.tsx  run.tsx  scrape.tsx  screenshot.tsx  settings  settings.tsx  star.tsx  start.tsx  stop.tsx  support.tsx  update.tsx
source/components/: animatedlogo.tsx  apidashboard.tsx  callout.tsx  cliwelcomemessage.tsx  commandlist.tsx  error.tsx  getdashboard.tsx  help.tsx  postdashboard.tsx  progressbar.tsx  templatelist.tsx  templatepicker.tsx  updatenotification.tsx  warning.tsx
source/context/: calloutcontext.tsx  forgestepcontext.tsx  runstepcontext.tsx  stepcontext.tsx
source/hooks/: useapi.ts  uselazyapi.ts  usetask.ts
source/types/: ink-image.d.ts
source/utils/: cache.ts  config.ts  constants.ts  cookbook.ts  credentials-api.ts  fetchapi.ts  files.ts  forge.ts  loginSuccess.html  packageConfig.ts  registry.ts  session.ts  templateHelp.ts  topLevelTools.ts  types.d.ts  update.ts  usefullscreen.ts
src/: lib.rs  main.rs  telemetry.rs
src/api/: client.rs  device_auth.rs  generated.rs  mod.rs  projects.rs  session.rs  top_level.rs
src/browser/: engine.rs  lifecycle.rs  mod.rs  passthrough.rs  profile_porter.rs  profile_store.rs  routing.rs  runtime.rs
src/commands/: cache.rs  completion.rs  config.rs  credentials.rs  describe.rs  dev.rs  docs.rs  doctor.rs  forge.rs  login.rs  logout.rs  mcp.rs  mod.rs  pdf.rs  profile.rs  projects.rs  run.rs  scrape.rs  screenshot.rs  sessions.rs  settings.rs  star.rs  support.rs  update.rs
src/config/: auth.rs  mod.rs  session_state.rs  settings.rs
src/mcp/: mod.rs  server.rs  session.rs  transport.rs
src/util/: api.rs  mod.rs  output.rs  style.rs  url.rs
tests/: action_coverage.rs  api_openapi_coverage.rs  browser_flag_parity.rs  cli-spec.json  cli_blackbox.rs  cli_compat.rs  dev_command.rs  lifecycle_contract.rs  native_api_coverage.rs  output_parity.rs  setup.ts
tests/integration/: browser-cloud-e2e.test.ts  browser-cloud-login-workflow.test.ts  harness.ts  (+12 more)
(+129 files in other folders)
