[package]
name = "steel-cli"
version = "0.1.0"
edition = "2024"
description = "Steel CLI - Browser automation for AI agents"
license = "MIT"

[lib]
name = "steel_cli"
path = "src/lib.rs"

[[bin]]
name = "steel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
thiserror = "2"
dirs = "6"
open = "5"
dialoguer = "0.11"
indicatif = "0.17"
colored = "3"
urlencoding = "2"
url = "2"
rusqlite = { version = "0.33", features = ["bundled"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"

# Browser engine
browser-engine = { git = "https://github.com/steel-dev/agent-browser", branch = "as-lib", package = "agent-browser" }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
