[package]
name = "steel-cli"
version = "0.4.1"
edition = "2024"
description = "Steel CLI - Browser automation for AI agents"
license = "MIT"
repository = "https://github.com/steel-dev/cli"

[lib]
name = "steel_cli"
path = "src/lib.rs"

[[bin]]
name = "steel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
thiserror = "2"
dirs = "6"
open = "5"
dialoguer = "0.12"
urlencoding = "2"
url = "2"
rusqlite = { version = "0.39", features = ["bundled"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
aes = "0.8"
cbc = "0.2"
pbkdf2 = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"

# Browser engine
browser-engine = { git = "https://github.com/steel-dev/agent-browser", branch = "as-lib", package = "agent-browser" }
aes-gcm = "0.10"
getrandom = "0.4"

libc = "0.2"
tempfile = "3"
jiff = "0.2"
parking_lot = "0.12"

serde_yaml = "0.9"

[dev-dependencies]
wiremock = "0.6"
proptest = "1"
proptest-derive = "0.8"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
redundant_clone = "deny"
# tokio async fns don't need Send bounds
future_not_send = "allow"
# if-let is often more readable than map_or_else
option_if_let_else = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1
